<resources>
    <string name="app_name">Concurrency</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="runnable">runnable</string>
    <string name="new_thread">new thread</string>
    <string name="handler_post">handler post</string>
    <string name="timer_task">timer task</string>
    <string name="rx">rx</string>
    <string name="async_task">async task</string>
    <string name="thread_pool">Thread Pool</string>
</resources>
