<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ucsoftworks.concurrency.ConcurrencyFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/runnable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/runnable" />

            <Button
                android:id="@+id/new_thread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_thread" />

            <Button
                android:id="@+id/handler_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/handler_post" />

            <Button
                android:id="@+id/async_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/async_task" />

            <Button
                android:id="@+id/timer_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timer_task" />

            <Button
                android:id="@+id/rx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rx" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
